WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
ASSIGNED
133240
[Mac] preload AVAssetTrack properties before asking for them
https://bugs.webkit.org/show_bug.cgi?id=133240
Summary
[Mac] preload AVAssetTrack properties before asking for them
Eric Carlson
Reported
2014-05-23 16:25:41 PDT
r168979
started checking AVAssetTrack preferredTransform and naturalSize, so we should preload them along with the other track properties we use.
Attachments
Proposed patch.
(1.65 KB, patch)
2014-05-23 16:28 PDT
,
Eric Carlson
jer.noble
: review+
Details
Formatted Diff
Diff
Patch for landing.
(1.50 KB, patch)
2014-05-24 23:24 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-05-23 16:26:21 PDT
<
rdar://problem/17022444
>
Eric Carlson
Comment 2
2014-05-23 16:28:55 PDT
Created
attachment 232001
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2014-05-23 16:30:58 PDT
Attachment 232001
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:2558: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 4
2014-05-23 18:31:28 PDT
Comment on
attachment 232001
[details]
Proposed patch. r=me
Eric Carlson
Comment 5
2014-05-24 23:24:42 PDT
Created
attachment 232030
[details]
Patch for landing.
WebKit Commit Bot
Comment 6
2014-05-25 00:00:46 PDT
Comment on
attachment 232030
[details]
Patch for landing. Clearing flags on attachment: 232030 Committed
r169317
: <
http://trac.webkit.org/changeset/169317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug