[Mac] preload AVAssetTrack properties before asking for them https://bugs.webkit.org/show_bug.cgi?id=133240

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::assetTrackMetadataKeyNames): Add preferredTransform and naturalSize to the list
    of properties we preload.


Canonical link: https://commits.webkit.org/151279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169317 268f45cc-cd09-0410-ab3c-d52691b4dbfc